--- a/accueil.html
+++ b/accueil.html
@@ -21,11 +21,11 @@
         <!-- Add a placeholder for the Twitch embed -->
         <div id="twitch-embed"></div>
         <iframe frameborder="<frameborder width>"
-          scrolling="<scrolling>"
-          id="<channel>"
-          src="<src url>"
-          height="<height>"
-          width="<width>">
+          scrolling="yes"
+          id="chat"
+          src="https://www.twitch.tv/monstercat/chat?popout="
+          height= "33.75vw"
+          width="auto">
         </iframe>
       </div>
 
@@ -58,8 +58,8 @@
 
     <script type="text/javascript">
       var embed = new Twitch.Embed("twitch-embed", {
-        width: "1000w",
-        height: 480,
+        width: "100%",
+        height: "100%",
         channel: "monstercat",
         layout: "video",
         autoplay: false
