--- a/accueil.html
+++ b/accueil.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Aexar</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" href="img/icon.png">
   </head>
   <body id="background">
     <div id="header">
